--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,9 +141,18 @@ jobs:
       - name: Update npm
         run: npm install -g npm@latest
 
-      - uses: actions/download-artifact@v4
-        with:
-          path: dist
+      - name: Download npm tarball from release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ needs.release.outputs.version }}
+          TAG: ${{ github.ref_name }}
+        run: |
+          set -euo pipefail
+          mkdir -p dist/npm
+          gh release download "${TAG}" \
+            --repo "${GITHUB_REPOSITORY}" \
+            --pattern "skillpack-npm-${VERSION}.tgz" \
+            --dir dist/npm
 
       - name: Publish npm package
         env:
