--- a/crates/skillpack/Cargo.toml
+++ b/crates/skillpack/Cargo.toml
@@ -9,17 +9,18 @@ name = "sp"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.100"
 blake3 = "1.8.3"
 clap = { version = "4.5.54", features = ["derive"] }
+color-eyre = "0.6.5"
 dirs = "6.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_yaml = "0.9.34"
 shellexpand = "3.1.1"
 tempfile = "3.24.0"
-thiserror = "2.0.18"
 time = { version = "0.3.45", features = ["formatting"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 walkdir = "2.5.0"
 
 [dev-dependencies]
