--- a/crates/skillpack/Cargo.toml
+++ b/crates/skillpack/Cargo.toml
@@ -13,10 +13,12 @@ blake3 = "1.8.3"
 clap = { version = "4.5.54", features = ["derive"] }
 color-eyre = "0.6.5"
 dirs = "6.0.0"
+globset = "0.4.16"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_yaml = "0.9.34"
 shellexpand = "3.1.1"
+owo-colors = "4"
 tempfile = "3.24.0"
 time = { version = "0.3.45", features = ["formatting"] }
 tracing = "0.1.44"
