--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 default_install_hook_types:
   - pre-push
 
+# Use `prek` instead of `pre-commit` CLI: much faster, rewrite in Rust.
 default_stages:
   - pre-push
 
