--- a/packs/skillpack.yaml
+++ b/packs/skillpack.yaml
@@ -3,6 +3,9 @@ name: skillpack
 include:
   - "**"
 
+install:
+  flatten: true
+
 imports:
   - repo: github.com/intellectronica/agent-skills
     include:
