--- a/crates/skillpack/Cargo.toml
+++ b/crates/skillpack/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.54", features = ["derive"] }
 color-eyre = "0.6.5"
 dirs = "6.0.0"
 globset = "0.4.16"
+include_dir = "0.7.4"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_yaml = "0.9.34"
